package designPatterns.solid.L.wrong;

public class Car extends Vehicle{
    @Override
    public Integer getNumberOfWheels(){return 4;}
}
