package designPatterns.solid.L.wrong;

public class MotorCycle extends Vehicle{
}
