@startuml

title __WRONG's Class Diagram__\n

  namespace designPatterns.solid.L {
    namespace wrong {
      class designPatterns.solid.L.wrong.Bicycle {
          + hasEngine()
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace wrong {
      class designPatterns.solid.L.wrong.Car {
          + getNumberOfWheels()
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace wrong {
      class designPatterns.solid.L.wrong.MotorCycle {
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace wrong {
      class designPatterns.solid.L.wrong.Vehicle {
          + getNumberOfWheels()
          + hasEngine()
      }
    }
  }
  

  designPatterns.solid.L.wrong.Bicycle -up-|> designPatterns.solid.L.wrong.Vehicle
  designPatterns.solid.L.wrong.Car -up-|> designPatterns.solid.L.wrong.Vehicle
  designPatterns.solid.L.wrong.MotorCycle -up-|> designPatterns.solid.L.wrong.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
